Adds the final stage of the game

--- a/config/settings.json
+++ b/config/settings.json
@@ -2,35 +2,74 @@
     "font.family": "resources/Minisystem.otf",
     "font.color": "grey50",
     "game.score.font.size": 90,
-    "menu.title.font.size": 100,
-    "menu.option.font.size": 35,
-    "menu.start.text": "Press (ENTER) to play",
-    "menu.exit.text": "Press (ESC) to exit",
+    "game.winner.font.size": 60,
+    "game.option.font.size": 30,
+    "menu.title.font.size": 90,
+    "menu.option.font.size": 30,
+    "menu.title.text": "PONG",
+    "menu.start.text": "(ENTER) to start",
+    "menu.exit.text": "(ESC) to exit",
+    "submenu.restart.text": "(ENTER) to restart",
+    "submenu.exit.text": "(ESC) to menu",
 
     "game.fps": 60.0,
- 
+    "game.points.max": 10,
+
     "mixer.frequency": 44100,
     "mixer.size": 16,
     "mixer.channels": 2,
     "mixer.buffer": 512,
- 
+
     "screen.width": 1920,
     "screen.height": 1080,
     "screen.color": "grey0",
- 
+
+    "screen.grid.width.00.12": 0.000,
+    "screen.grid.width.01.12": 0.083,
+    "screen.grid.width.02.12": 0.166,
+    "screen.grid.width.03.12": 0.250,
+    "screen.grid.width.04.12": 0.333,
+    "screen.grid.width.05.12": 0.416,
+    "screen.grid.width.06.12": 0.500,
+    "screen.grid.width.07.12": 0.583,
+    "screen.grid.width.08.12": 0.666,
+    "screen.grid.width.09.12": 0.750,
+    "screen.grid.width.10.12": 0.833,
+    "screen.grid.width.11.12": 0.916,
+    "screen.grid.width.12.12": 1.000,
+
+    "screen.grid.height.00.12": 0.000,
+    "screen.grid.height.01.12": 0.083,
+    "screen.grid.height.02.12": 0.166,
+    "screen.grid.height.03.12": 0.250,
+    "screen.grid.height.04.12": 0.333,
+    "screen.grid.height.05.12": 0.416,
+    "screen.grid.height.06.12": 0.500,
+    "screen.grid.height.07.12": 0.583,
+    "screen.grid.height.08.12": 0.666,
+    "screen.grid.height.09.12": 0.750,
+    "screen.grid.height.10.12": 0.833,
+    "screen.grid.height.11.12": 0.916,
+    "screen.grid.height.12.12": 1.000,
+
+    "sound.volume": 0.3,
+    "music.volume": 0.3,
+
     "start.sound": "resources/start.mp3",
     "collision.sound": "resources/collision.mp3",
     "collision.sound.cooldown": 0.08,
     "score.sound": "resources/score.mp3",
+    "winner.sound": "resources/winner.mp3",
+    "restart.sound": "resources/restart.mp3",
     "background.music": "resources/background.mp3",
 
     "ball.speed": 750,
     "ball.size": 10,
     "ball.color": "grey100",
     "ball.angle.max": 45,
-    "ball.waiting.time.appear": 1.0,
-    "ball.waiting.time.settledown": 2.0,
-    "ball.waiting.time.play": 3.0,
+    "ball.ready.time.appear": 1.0,
+    "ball.ready.time.settledown": 2.0,
+    "ball.ready.time.play": 3.0,
     "ball.acceleration": 1.0,
     "ball.acceleration.increment": 0.1,
     "ball.speed.max": 5000000,
