--- a/config/settings.json
+++ b/config/settings.json
@@ -3,6 +3,7 @@
     "font.color": "grey50",
     "game.score.font.size": 90,
     "game.winner.font.size": 65,
+    "game.winner.text": "Winner",
     "game.option.font.size": 40,
     "menu.title.font.size": 90,
     "menu.option.font.size": 40,
@@ -63,14 +64,14 @@
     "restart.sound": "resources/restart.mp3",
     "background.music": "resources/background.mp3",
 
-    "ball.speed": 750,
+    "ball.speed": 500,
     "ball.size": 10,
     "ball.color": "grey100",
     "ball.angle.max": 45,
     "ball.ready.time.appear": 1.0,
     "ball.ready.time.settledown": 2.0,
     "ball.ready.time.play": 3.0,
-    "ball.acceleration": 1.0,
+    "ball.acceleration": 1.1,
     "ball.acceleration.increment": 0.1,
     "ball.speed.max": 5000000,
 
